--- a/style.css
+++ b/style.css
@@ -297,9 +297,8 @@ body::before {
 .divider {
   height: 1px;
   background-color: rgba(255, 255, 255, 0.1);
-  margin: 5px 0;
+  margin: 50px auto;
   width: 20%;
-  margin: auto;
 }
 
 /* Blur in fondo al portfolio solo su desktop */
