--- a/style.css
+++ b/style.css
@@ -255,6 +255,12 @@ body {
   text-align: center;
 }
 
+.stack-logos-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
 /* Popover / bottom-sheet */
 .tech-overlay {
   position: fixed;
@@ -316,6 +322,17 @@ body {
     pointer-events: none;
 
     background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 1));
+  }
+}
+
+@media (max-width: 1366px) {
+  body {
+    padding: 0 5%;
+  }
+
+  .personal-info {
+    height: 75%;
+    margin: auto;
   }
 }
 
