--- a/style.css
+++ b/style.css
@@ -9,8 +9,14 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: Inter, system-ui, -apple-system, "Segoe UI", Roboto,
-    "Helvetica Neue", Arial;
+  font-family:
+    Inter,
+    system-ui,
+    -apple-system,
+    "Segoe UI",
+    Roboto,
+    "Helvetica Neue",
+    Arial;
   color: #c9e1fc;
 }
 
@@ -82,7 +88,10 @@ a {
   justify-content: center;
   background: rgba(255, 255, 255, 0.02);
   border-radius: 8px;
-  transition: transform 140ms ease, background 140ms ease, color 140ms ease;
+  transition:
+    transform 140ms ease,
+    background 140ms ease,
+    color 140ms ease;
 }
 
 .social-link:hover {
@@ -136,8 +145,10 @@ a {
   border-radius: 8px;
   color: #cfe2ff;
   text-decoration: none;
-  transition: background 140ms cubic-bezier(0.2, 0.8, 0.2, 1),
-    transform 120ms ease, box-shadow 140ms ease;
+  transition:
+    background 140ms cubic-bezier(0.2, 0.8, 0.2, 1),
+    transform 120ms ease,
+    box-shadow 140ms ease;
 }
 
 .side-menu a:hover {
@@ -289,7 +300,9 @@ a {
   background: rgba(255, 255, 255, 0.03);
   color: #cfe2ff;
   text-decoration: none;
-  transition: transform 120ms ease, background 120ms ease;
+  transition:
+    transform 120ms ease,
+    background 120ms ease;
 }
 
 .project-cta:hover {
@@ -299,7 +312,7 @@ a {
 }
 
 .site-footer {
-  padding: 30px 0;
+  padding: 30px 0 100px 0;
 }
 
 .site-footer i {
@@ -346,6 +359,24 @@ a {
 /* Hover effetto extra */
 .scroll-to-top:hover {
   transform: translateY(-4px);
+}
+
+@media (min-width: 2560px) {
+  body {
+    padding-left: clamp(25%, 14vw, 18%);
+    padding-right: clamp(25%, 14vw, 18%);
+  }
+
+  .tech-card {
+    margin: 30px auto;
+    width: 70%;
+}
+}
+
+@media (min-width: 1920px) {
+  .personal-info {
+    margin-top: 3%;
+  }
 }
 
 @media (max-width: 1366px) {
@@ -419,7 +450,6 @@ a {
     margin-left: 0;
   }
 
-  /* Footer styles */
   .site-footer {
     margin-top: 32px;
     padding: 28px 0;
